# sergievsky

./: .gitignore  pyproject.toml  readme.md
sergievsky/: Makefile  dump.db.yaml  manage.py
sergievsky/blog/: admin.py  forms.py  models.py  urls.py  views.py
sergievsky/blog/templates/comment/: create.html
sergievsky/blog/templates/post/: create.html  delete.html  detail.html  list.html  update.html
sergievsky/schedule/: forms.py  models.py  urls.py  views.py
sergievsky/schedule/handlers/: handler_docx.py
sergievsky/schedule/templates/schedule/: create.html  delete.html  detail.html  list.html  update.html
sergievsky/sergievsky/: .dev.env  asgi.py  settings.py  urls.py  wsgi.py
sergievsky/template/: index.html
